--- a/src/index.css
+++ b/src/index.css
@@ -1,68 +1,34 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
 body {
-  margin: 0;
+  background-color: darkgrey;
+}
+.header {
   display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  gap:200px;
 }
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+.search {
+  padding: 5px;
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  font-size: 20px;
+  border: 2px solid white;
+  width: 652px;
+  border-radius: 16px;
+  height: 25px;
+  position: relative;
+  margin-top: 16px;
 }
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
+.search input {
+  outline: transparent;
+  border: none;
+  background-color: transparent;
 }
-button:hover {
-  border-color: #646cff;
+.cart {
+  position: absolute;
+  right: 50px;
+  font-size: 50px;
+  margin: 15px;
 }
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+.h1 {
+  text-shadow: 2px 2px #ff0000;
 }
