--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,29 @@ body {
   background-color: black;
   color: white;
 }
+.nav {
+  display: flex;
+  justify-content: center; 
+  align-items: center; 
+  gap: 20px;
+  background-color: black;
+  padding: 20px;
+}
+
+.nav button {
+  background-color: white;
+  color: black;
+  padding: 10px 20px;
+  border-radius: 5px;
+  border: none;
+  cursor: pointer;
+  font-size: 16px;
+  transition: background-color 0.3s ease;
+}
+
+.nav button:hover {
+  background-color: grey;
+}
 .welcome {
   display: flex;
   gap: 100px;
@@ -173,7 +196,7 @@ button:hover {
 .checkout button:hover {
   background-color: #218838;
 }
-h1 {
+/* h1 {
   font-family: 'Arial', sans-serif;
   font-size: 3rem; 
   color: #ffffff; 
@@ -187,4 +210,4 @@ h1 {
   background: linear-gradient(90deg,black,grey); 
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent; 
-}
+} */
